@@ -82,7 +82,10 @@ Matlab-compatible and yields results which more nearly minimize `norm
 (A*x - b)`.  Previously, Octave computed a minimum-norm solution.
 
 - The `factor` function has been overhauled for speed.  For large
-composite numbers > 1e14, it can be up to 10,000 times faster.
+inputs > 1e14, it can be up to 10,000 times faster.
+
+- The `isprime` function uses a new primality testing algorithm
+that is up to 50,000 times faster for inputs > 1e14.
 
 - The `betainc` function now calculates an exact output for the
 important special cases where a or b are 1.
